      advantage is that code coverage results are produced more quickly in
      this mode since AFL can generate test cases - at least initially - much
      faster than code coverage can be calculated for each test case. The
      trade off in this mode is that code coverage stats are not tracked per
      AFL test case, but rather across all new test cases essentially as a
      unified set.
    - Use the tempfile module for temporary files (suggested by Markus
      Teufelberger in issue #19).

afl-cov-0.5 (01/11/2016):
    - For --live mode operations, add the same core pattern detection logic to
      afl-cov that is implemented by afl-fuzz. This helps to ensure that the
      environment in which afl-cov is running is consistent with what afl-fuzz
      expects to see.
    - Make sure --afl-fuzzing-dir exists in --func-search and --line-search
      modes.

afl-cov-0.4 (01/09/2016):
    - Add support for parallelized execution runs of AFL. This is done by
      tracking all fuzzing directory instances created with afl-fuzz '-M' or
      '-S'. These directories are created in the main sync directory
      ('afl-fuzz -o sync_dir'). The coverage results are calculated globally
      across all fuzzing instances.
    - Default to not include branch coverage data within code coverage results
      This is because AFL commonly build up many hundreds of test cases, and
      generating branch coverage across all of these cases may slow afl-cov
      down significantly. However, if branch coverage is desired or required,
      just add the new --enable-branch-coverage argument.
    - Added a test suite in the test/ directory that leverages the python
      unittest module. Proper operation of the test suite requires afl-fuzz
      to be installed, and tests are performed against a particular commit
      (e3ae6747) from the fwknop project for which AFL test cases were
      pre-built.
    - Bug fix reported by @kcwu about some files not showing up in zero